add some db models

--- a/Interviewer.WebApi/appsettings.json
+++ b/Interviewer.WebApi/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Interviewer;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=Interviewer;Integrated Security=True",
+    "providerName": "System.Data.SqlClient"
   },
   "Logging": {
     "IncludeScopes": false,
