--- a/interviewer.app/package.json
+++ b/interviewer.app/package.json
@@ -7,13 +7,16 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.12",
-    "standard": "^10.0.3"
+    "react-scripts": "1.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "standard": "^10.0.3",
+    "toastr": "^2.1.2"
   }
 }
