--- a/interviewer.app/package.json
+++ b/interviewer.app/package.json
@@ -15,7 +15,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "flux": "^3.1.3",
     "flux-react": "^3.0.0",
+    "react-flux": "^1.0.1",
     "standard": "^10.0.3",
     "toastr": "^2.1.2"
   }
