--- a/interviewer.app/package.json
+++ b/interviewer.app/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "flux": "^3.1.3",
     "flux-react": "^3.0.0",
+    "jquery": "^3.2.1",
     "react-flux": "^1.0.1",
     "standard": "^10.0.3",
     "toastr": "^2.1.2"
