--- a/interviewer.app/package.json
+++ b/interviewer.app/package.json
@@ -18,8 +18,11 @@
     "flux": "^3.1.3",
     "flux-react": "^3.0.0",
     "jquery": "^3.2.1",
+    "prop-types": "^15.5.10",
+    "query-string": "^5.0.0",
     "react-flux": "^1.0.1",
     "standard": "^10.0.3",
-    "toastr": "^2.1.2"
+    "toastr": "^2.1.2",
+    "underscore": "^1.8.3"
   }
 }
